--- a/B.Indo6beberapaFormatif.html
+++ b/B.Indo6beberapaFormatif.html
@@ -18,9 +18,9 @@
         }
 
         header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 30px;
+            background: url('bg7.jpg') no-repeat center/cover;
+            color: rgb(0, 0, 0);
+            padding: 50px;
             text-align: center;
         }
 
@@ -30,14 +30,14 @@
         }
 
         nav {
-            background-color: #025613;
+            background-color: #2a5fe5;
             display: flex;
             justify-content: center;
             padding: 10px;
         }
 
         nav a {
-            color: rgb(255, 255, 255);
+            color: white;
             padding: 14px 20px;
             text-decoration: none;
             text-align: center;
@@ -73,32 +73,26 @@
         }
 
         .menu-item {
-            background-color: #4CAF50;
+            background-color: #6caad3;
             color: white;
             padding: 15px 30px;
             border-radius: 8px;
             text-align: center;
             font-size: 1.1em;
             cursor: pointer;
-            transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
             width: 200px;
             box-sizing: border-box;
         }
 
         .menu-item:hover {
-            background-color: #45a049;
-            transform: translateY(-5px) scale(1.05); /* Efek hover */
-            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2); /* Bayangan */
-        }
-
-        .menu-item a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
+            background-color: #356dd6;
+            transform: translateY(-5px) scale(1.05);
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
         }
 
         footer {
-            background-color: #025613;
+            background-color: #2355d4;
             color: white;
             padding: 20px;
             text-align: center;
@@ -117,67 +111,29 @@
 </header>
 
 <nav>
-    <a href="index.html">Home</a>
+    <a href="index.html">Kembali</a>
     <a href="Bank Soal.html">Bank Soal</a>
     <a href="#resources">Modul Ajar</a>
     <a href="#resources">Video Pembelajaran</a>
     <a href="#contact">Buku Digital</a>
     <a href="#resources">Forum Diskusi</a>
-
 </nav>
 
 <div class="container">
-    <!-- Kategori Semester 1 -->
     <div class="category">
-        <h2>SEMESTER 1</h2>
-        <div class="menu-list">
-            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1</a></div>
-            <div class="menu-item"><a href="SOAL SJT MOTIVASI DAN PEMBELAJARAN.html">Formatif 2</a></div>
-            <div class="menu-item"><a href="#">Formatif 3</a></div>
-            <div class="menu-item"><a href="#">Formatif 4</a></div>
-            <div class="menu-item"><a href="#">Formatif 5</a></div>
-            <div class="menu-item"><a href="#">Formatif 6</a></div>
-            <div class="menu-item"><a href="#">Formatif 7</a></div>
-            <div class="menu-item"><a href="#">Formatif 8</a></div>
-            <div class="menu-item"><a href="#">Formatif 9</a></div>
-            <div class="menu-item"><a href="#">Formatif 10</a></div>
-            <div class="menu-item"><a href="#">Formatif 11</a></div>
-            <div class="menu-item"><a href="#">Formatif 12</a></div>
-            <div class="menu-item"><a href="#">Formatif 13</a></div>
-            <div class="menu-item"><a href="#">Formatif 14</a></div>
-            <div class="menu-item"><a href="#">Formatif 15</a></div>
-            <div class="menu-item"><a href="#">Formatif 16</a></div>
-            <div class="menu-item"><a href="#">Formatif 17</a></div>
-            <div class="menu-item"><a href="#">Formatif 18</a></div>
-            <div class="menu-item"><a href="#">Formatif 19</a></div>
-            <div class="menu-item"><a href="#">Formatif 20</a></div>
-        </div>
-    </div>
+        <h2>BAB 1</h2>
+        <h2>Selamatkan Makhluk Hidup</h2>
+        <h2>Tumbuhan Sahabatku</h2>
 
-    <!-- Kategori Semester 2 -->
-    <div class="category">
-        <h2>SEMESTER 2</h2>
         <div class="menu-list">
-            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1</a></div>
-            <div class="menu-item"><a href="#">Formatif 2</a></div>
-            <div class="menu-item"><a href="#">Formatif 3</a></div>
-            <div class="menu-item"><a href="#">Formatif 4</a></div>
-            <div class="menu-item"><a href="#">Formatif 5</a></div>
-            <div class="menu-item"><a href="#">Formatif 6</a></div>
-            <div class="menu-item"><a href="#">Formatif 7</a></div>
-            <div class="menu-item"><a href="#">Formatif 8</a></div>
-            <div class="menu-item"><a href="#">Formatif 9</a></div>
-            <div class="menu-item"><a href="#">Formatif 10</a></div>
-            <div class="menu-item"><a href="#">Formatif 11</a></div>
-            <div class="menu-item"><a href="#">Formatif 12</a></div>
-            <div class="menu-item"><a href="#">Formatif 13</a></div>
-            <div class="menu-item"><a href="#">Formatif 14</a></div>
-            <div class="menu-item"><a href="#">Formatif 15</a></div>
-            <div class="menu-item"><a href="#">Formatif 16</a></div>
-            <div class="menu-item"><a href="#">Formatif 17</a></div>
-            <div class="menu-item"><a href="#">Formatif 18</a></div>
-            <div class="menu-item"><a href="#">Formatif 19</a></div>
-            <div class="menu-item"><a href="#">Formatif 20</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.1</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.2</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.3</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_4.html">Formatif 1.4</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.5</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.6</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.7</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_4.html">Formatif 1.8</a></div>
         </div>
     </div>
 </div>
@@ -185,6 +141,18 @@
 <footer>
     <p>&copy; 2024 Video Pembelajaran. Semua hak cipta dilindungi.</p>
 </footer>
+
+<script>
+    // Menangani klik untuk mencegah jeda
+    document.querySelectorAll('.menu-item a').forEach(item => {
+        item.addEventListener('click', function(event) {
+            event.preventDefault(); // Mencegah perilaku bawaan
+            const url = this.getAttribute('href');
+            // Navigasi langsung tanpa jeda
+            window.location.href = url;
+        });
+    });
+</script>
 
 </body>
 </html>
