--- a/bank soal.html
+++ b/bank soal.html
@@ -17,8 +17,8 @@
             min-height: 100vh;
         }
         header {
-            background-color: #4CAF50;
-            color: white;
+            background: url('bg7.jpg') no-repeat center/cover;
+            color: rgb(0, 0, 0);
             padding: 30px;
             text-align: center;
         }
@@ -76,7 +76,7 @@
             display: block;
             text-align: center;
             padding: 10px;
-            background-color: #4CAF50;
+            background-color:#2980b9;
             color: white;
             border-radius: 5px;
             text-decoration: none;
@@ -85,11 +85,11 @@
             transition: background-color 0.3s ease;
         }
         .video-card a:hover {
-            background-color: #45a049;
+            background-color: #2355d4;
         }
         
         footer {
-            background-color: #025613;
+            background-color: #2355d4;
             color: white;
             padding: 20px;
             text-align: center;
@@ -101,7 +101,7 @@
         }
         
         nav {
-            background-color: #025613;
+            background-color: #2355d4;
             display: flex;
             justify-content: center;
             padding: 10px;
@@ -141,7 +141,7 @@
 </header>
 
 <nav>
-    <a href="kelas6.html">Home</a>
+    <a href="kelas6.html">Kembali</a>
     <a href="Bank Soal.html">Bank Soal</a>
     <a href="#resources">Modul Ajar</a>
     <a href="#resources">Video Pembelajaran</a>
