--- a/kelas6.html
+++ b/kelas6.html
@@ -75,7 +75,7 @@
         /* Kartu */
         .card-container {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Mengurangi ukuran kartu */
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
             gap: 20px;
             justify-items: center;
             align-items: stretch;
@@ -87,12 +87,12 @@
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
             text-align: center;
             width: 100%;
-            aspect-ratio: 1 / 1; /* Membuat kartu berbentuk kubus */
+            aspect-ratio: 1 / 1;
             transition: transform 0.3s, box-shadow 0.3s;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start; /* Menjaga tombol tetap di bawah */
-            padding: 15px; /* Menambah padding agar lebih rapi */
+            justify-content: flex-start;
+            padding: 15px;
         }
 
         .card:hover {
@@ -124,15 +124,15 @@
 
         .card a {
             display: inline-block;
-            padding: 12px 20px; /* Menambah padding untuk tombol */
+            padding: 12px 20px;
             background-color: #3498db;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
             font-size: 14px;
-            margin-top: auto; /* Memastikan tombol selalu di bawah */
+            margin-top: auto;
             transition: background-color 0.3s;
-            text-align: center; /* Agar teks tombol berada di tengah */
+            text-align: center;
         }
 
         .card a:hover {
@@ -159,7 +159,7 @@
         }
 
         #contact a:hover {
-            background-color: #2980b9;
+            background-color: #54616a;
             color: #ffffff;
         }
 
@@ -169,7 +169,7 @@
             color: #fff;
             text-align: center;
             padding: 20px;
-            margin-top: auto; /* Dorong footer ke bawah */
+            margin-top: auto;
         }
 
         footer p {
@@ -200,12 +200,11 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="Bank Soal.html">Bank Soal</a>
-        <a href="#resources">Modul Ajar</a>
-        <a href="#resources">Video Pembelajaran</a>
-        <a href="#contact">Buku Digital</a>
-        <a href="#resources">Forum Diskusi</a>
-
+        <a href="bank soal.html">Bank Soal</a>
+        <a href="modul ajar indo6.html">Modul Ajar</a>
+        <a href="videopembelajaran.html">Video Pembelajaran</a>
+        <a href="Bukudigital.html">Buku Digital</a>
+        <a href="forum diskusi.html">Forum Diskusi</a>
     </nav>
 
     <section id="courses">
@@ -215,38 +214,69 @@
                 <img src="banksoal.png" alt="Bank Soal">
                 <h3>Bank Soal</h3>
                 <p>Silahkan berlatih soal-soal dari berbagai mata pelajaran.</p>
-                <a href="bank soal.html">Lihat Soal</a>
+                <a href="Bank Soal.html">Lihat Soal</a>
             </div>
             <div class="card">
                 <img src="modulajar.png" alt="Sumber Belajar">
                 <h3>Modul Ajar</h3>
                 <p>Silahkan Gunakan Sumber Belajar.</p>
-                <a href="Index Bank Soal IPAS.html">Lihat Soal</a>
+                <a href="modul ajar indo6.html">Lihat Soal</a>
             </div>
             <div class="card">
                 <img src="videopembelajaran.png" alt="Video Pembelajaran">
                 <h3>Video Pembelajaran</h3>
                 <p>Silahkan Menggunakan Video Pembelajaran.</p>
-                <a href="Index Bank Soal MTK.html">Lihat Soal</a>
+                <a href="Videopembelajaran.html">Lihat Video</a>
             </div>
             <div class="card">
                 <img src="forumdiskusi.png" alt="Forum Diskusi">
                 <h3>Forum Diskusi</h3>
                 <p>Silahkan Gunakan Forum ini Untuk Berdiskusi.</p>
-                <a href="Index Bank Soal Seni.html">Lihat Soal</a>
+                <a href="forum diskusi.html">Ayo diskusi</a>
             </div>
             <div class="card">
                 <img src="bukudigital.png" alt="Buku Digital">
                 <h3>Buku Digital atau E-book</h3>
                 <p>Silahkan Menggali informasi dengan membaca.</p>
-                <a href="Index Bank Soal Muatan Lokal.html">Lihat Soal</a>
+                <a href="Bukudigital.html">Lihat Buku</a>
+            </div>
+            <div class="card">
+                <img src="logocp.png" alt="Quiz Online">
+                <h3>Bank TP</h3>
+                <p>Ikuti quiz menarik untuk menambah wawasan.</p>
+                <a href="bank tp.html">Lihat TP</a>
+            </div>
+            <div class="card">
+                <img src="forumdiskusi.png" alt="Quiz Online">
+                <h3>Kumpulan CP</h3>
+                <p>Ikuti quiz menarik untuk menambah wawasan.</p>
+                <a href="quiz.html">Mulai Quiz</a>
+            </div>
+            <div class="card">
+                <img src="forumdiskusi.png" alt="Quiz Online">
+                <h3>Kumpulan CP</h3>
+                <p>Ikuti quiz menarik untuk menambah wawasan.</p>
+                <a href="quiz.html">Mulai Quiz</a>
+            </div>
+            <div class="card">
+                <img src="forumdiskusi.png" alt="Quiz Online">
+                <h3>Kumpulan CP</h3>
+                <p>Ikuti quiz menarik untuk menambah wawasan.</p>
+                <a href="quiz.html">Mulai Quiz</a>
+            </div>
+            <div class="card">
+                <img src="forumdiskusi.png" alt="Quiz Online">
+                <h3>Kumpulan CP</h3>
+                <p>Ikuti quiz menarik untuk menambah wawasan.</p>
+                <a href="quiz.html">Mulai Quiz</a>
             </div>
         </div>
     </section>
 
     <section id="contact">
         <div class="contact-info">
-            <p><strong>📍 Alamat:</strong> Jalan Raya Taman Purbakala. Kel. Cipari</p>
+            <p><strong>📍 Alamat:</strong> Jalan Raya Taman Purbakala
+
             <p><strong>📱 Telepon:</strong> 0881 2071 728</p>
             <p><strong>✉️ Email:</strong> <a href="mailto:yadicahyadi71@guru.sd.belajar.id">yadicahyadi71@guru.sd.belajar.id</a></p>
         </div>
