--- a/kelas6.html
+++ b/kelas6.html
@@ -241,7 +241,7 @@
                 <a href="Bukudigital.html">Lihat Buku</a>
             </div>
             <div class="card">
-                <img src="logocp.png" alt="Quiz Online">
+                <img src="tp.png" alt="Quiz Online">
                 <h3>Bank TP</h3>
                 <p>Ikuti quiz menarik untuk menambah wawasan.</p>
                 <a href="bank tp.html">Lihat TP</a>
