--- a/kelas6.html
+++ b/kelas6.html
@@ -214,7 +214,7 @@
                 <img src="banksoal.png" alt="Bank Soal">
                 <h3>Bank Soal</h3>
                 <p>Silahkan berlatih soal-soal dari berbagai mata pelajaran.</p>
-                <a href="Bank Soal.html">Lihat Soal</a>
+                <a href="bank soal.html">Lihat Soal</a>
             </div>
             <div class="card">
                 <img src="modulajar.png" alt="Sumber Belajar">
@@ -226,7 +226,7 @@
                 <img src="videopembelajaran.png" alt="Video Pembelajaran">
                 <h3>Video Pembelajaran</h3>
                 <p>Silahkan Menggunakan Video Pembelajaran.</p>
-                <a href="Videopembelajaran.html">Lihat Video</a>
+                <a href="videopembelajaran.html">Lihat Video</a>
             </div>
             <div class="card">
                 <img src="forumdiskusi.png" alt="Forum Diskusi">
@@ -238,7 +238,7 @@
                 <img src="bukudigital.png" alt="Buku Digital">
                 <h3>Buku Digital atau E-book</h3>
                 <p>Silahkan Menggali informasi dengan membaca.</p>
-                <a href="Bukudigital.html">Lihat Buku</a>
+                <a href="bukudigital.html">Lihat Buku</a>
             </div>
             <div class="card">
                 <img src="tp.png" alt="Quiz Online">
