--- a/kelas6.html
+++ b/kelas6.html
@@ -235,7 +235,7 @@
                 <a href="forum diskusi.html">Ayo diskusi</a>
             </div>
             <div class="card">
-                <img src="bukudigital.png" alt="Buku Digital">
+                <img src="Bukudigital.png" alt="Buku Digital">
                 <h3>Buku Digital atau E-book</h3>
                 <p>Silahkan Menggali informasi dengan membaca.</p>
                 <a href="bukudigital.html">Lihat Buku</a>
