--- a/kelas6.html
+++ b/kelas6.html
@@ -235,10 +235,10 @@
                 <a href="forum diskusi.html">Ayo diskusi</a>
             </div>
             <div class="card">
-                <img src="Bukudigital.png" alt="Buku Digital">
+                <img src="bukudigital.png" alt="Buku Digital">
                 <h3>Buku Digital atau E-book</h3>
                 <p>Silahkan Menggali informasi dengan membaca.</p>
-                <a href="bukudigital.html">Lihat Buku</a>
+                <a href="Bukudigital.html">Lihat Buku</a>
             </div>
             <div class="card">
                 <img src="tp.png" alt="Quiz Online">
