--- a/bank tp.html
+++ b/bank tp.html
@@ -130,6 +130,19 @@
         font-size: 0.9em;
     }
 }
+@media (max-width: 768px) {
+            nav {
+                flex-direction: column;
+            }
+
+            nav a {
+                margin: 5px 0;
+            }
+
+            .card-container {
+                grid-template-columns: 1fr;
+            }
+        }
 
     </style>
 </head>
