--- a/ipas6.html
+++ b/ipas6.html
@@ -76,7 +76,7 @@
             display: block;
             text-align: center;
             padding: 10px;
-            background-color:#2980b9;
+            background-color: #2980b9;
             color: white;
             border-radius: 5px;
             text-decoration: none;
@@ -118,20 +118,18 @@
             background-color: #2980B9;
         }
         /* Responsive Adjustments */
-
-    @media (max-width: 768px) {
-            nav {
-                flex-direction: column;
-            }
-
-            nav a {
-                margin: 5px 0;
-            }
-
-            .card-container {
-                grid-template-columns: 1fr;
-            }
-        }
+@media (max-width: 600px) {
+    header h1 {
+        font-size: 1.5em;
+    }
+    header p {
+        font-size: 0.9em;
+    }
+    nav a {
+        padding: 8px 10px;
+        font-size: 0.9em;
+    }
+}
 
     </style>
 </head>
@@ -139,16 +137,17 @@
 
 <header>
     <h1>Kumpulan Soal-soal</h1>
-    <p>Kumpulan pertanyaan yang disusun secara sistematis untuk menguji, melatih, atau menyebarkan pemahaman seseorang terhadap suatu materi. Soal-soal ini dapat berupa pilihan ganda, isian singkat, esai, atau jenis lainnya, yang dirancang sesuai dengan tingkat kesulitan dan kompetensi yang diukur.</p>
+    <p>.</p>
 </header>
 
 <nav>
-    <a href="kelas6.html">Kembali</a>
+    <a href="bank soal.html">Kembali</a>
     <a href="Bank Soal.html">Bank Soal</a>
     <a href="#resources">Modul Ajar</a>
     <a href="#resources">Video Pembelajaran</a>
     <a href="#contact">Buku Digital</a>
     <a href="#resources">Forum Diskusi</a>
+
 </nav>
 
 <div class="container">
@@ -158,68 +157,36 @@
         <div class="video-grid">
             <!-- Video Card 1 -->
             <div class="video-card">
-                <img src="indo6.png" alt="Video 1">
+                <img src="Logoformatif.png" alt="Video 1">
                 <div class="content">
-                    <h3>B. Indonesia</h3>
-                    <a href="b.indo6.html" target="_blank">Lihat</a>
+                    <h3>Asesmen Formatif</h3>
+                    <a href="ipas6beberapaFormatif.html" target="_blank">Lihat Soal</a>
                 </div>
             </div>
             <!-- Video Card 2 -->
             <div class="video-card">
-                <img src="ipas6.png" alt="Video 2">
+                <img src="Logosumatif.png" alt="Video 2">
                 <div class="content">
-                    <h3>IPAS</h3>
-                    <a href="ipas6.html" target="_blank">Lihat</a>
+                    <h3>Asesmen Sumatif</h3>
+                    <a href="https://www.youtube.com/watch?v=exampleID2" target="_blank">Lihat Soal</a>
+                </div>
+            </div>
+            <!-- Video Card 2 -->
+            <div class="video-card">
+                <img src="Logosumatif.png" alt="Video 2">
+                <div class="content">
+                    <h3>Remedial Asesmen Sumatif</h3>
+                    <a href="soal_indo_formatif_remedial.html" target="_blank">Lihat Soal</a>
                 </div>
             </div>
             <!-- Video Card 3 -->
             <div class="video-card">
-                <img src="mtk6.png" alt="Video 3">
+                <img src="logosoal.png" alt="Video 3">
                 <div class="content">
-                    <h3>Matematika</h3>
-                    <a href="matematika6.html" target="_blank">Lihat</a>
+                    <h3>Soal Latihan</h3>
+                    <a href="https://www.youtube.com/watch?v=exampleID2" target="_blank">Lihat Soal</a>
+            
                 </div>
-            </div>
-            <!-- Video Card 3 -->
-            <div class="video-card">
-                <img src="pancasila6.png" alt="Video 3">
-                <div class="content">
-                    <h3>Pancasila</h3>
-                    <a href="pancasila6.html" target="_blank">Lihat</a>
-                </div>
-            </div>
-            <!-- Video Card 3 -->
-            <div class="video-card">
-                <img src="seni6.png" alt="Video 3">
-                <div class="content">
-                    <h3>Seni</h3>
-                    <a href="seni6.html" target="_blank">Lihat</a>
-                </div>
-            </div>
-            <!-- Video Card 3 -->
-            <div class="video-card">
-                <img src="pai6.png" alt="Video 3">
-                <div class="content">
-                    <h3>PAI</h3>
-                    <a href="pai6.html" target="_blank">Lihat</a>
-                </div>
-            </div>
-            <!-- Video Card 3 -->
-            <div class="video-card">
-                <img src="bahasa sunda.png" alt="Video 3">
-                <div class="content">
-                    <h3>B. Sunda</h3>
-                    <a href="b sunda6.html" target="_blank">Lihat</a>
-                </div>
-            </div>
-            <!-- Video Card 3 -->
-            <div class="video-card">
-                <img src="inggris6.png" alt="Video 3">
-                <div class="content">
-                    <h3>B.Inggris</h3>
-                    <a href="b inggris 6.html" target="_blank">Lihat</a>
-                </div>
-
             </div>
         </div>
     </div>
