--- a/Bukudigital.html
+++ b/Bukudigital.html
@@ -39,20 +39,17 @@
 
         /* Navigation */
         nav {
-            background: #2355d4;
+            background-color: #2355d4;
             display: flex;
             justify-content: center;
-            padding: 5px;
+            padding: 10px;
         }
 
         nav a {
-            color: white;
+            color: rgb(255, 255, 255);
+            padding: 14px 20px;
             text-decoration: none;
-            margin: 0 15px;
-            font-size: 1.1em;
-            padding: 10px 15px;
-            transition: all 0.3s ease;
-            border-radius: 5px;
+            text-align: center;
         }
 
         nav a:hover {
@@ -131,6 +128,21 @@
             padding: 15px;
             font-size: 0.9em;
         }
+                /* Responsive Adjustments */
+
+    @media (max-width: 768px) {
+            nav {
+                flex-direction: column;
+            }
+
+            nav a {
+                margin: 5px 0;
+            }
+
+            .card-container {
+                grid-template-columns: 1fr;
+            }
+        }
     </style>
 </head>
 <body>
@@ -159,26 +171,72 @@
 
         <div class="book-shelf">
             <div class="book" style="background-image: url('Bahasa-Indonesia-BS-KLS-VI-Cover.png');">
-                <a href="BSINDO6.html">B.Indonesia</a>
+                <a href="https://static.buku.kemdikbud.go.id/content/pdf/bukuteks/kurikulum21/Bahasa-Indonesia-BS-KLS-VI.pdf">B.Indonesia</a>
             </div>
             <div class="book" style="background-image: url('IPAS-BS-KLS-VI-Cover.png');">
-                <a href="BSIPAS6.html">IPAS</a>
+                <a href="https://static.buku.kemdikbud.go.id/content/pdf/bukuteks/kurikulum21/IPAS-BS-KLS-VI.pdf">IPAS</a>
             </div>
             <div class="book" style="background-image: url('Pendidikan-Pancasila-BS-KLS-VI-Cover.png');">
-                <a href="soal_indo_formatif_3.html">Pancasila</a>
+                <a href="https://drive.google.com/file/d/17ez3fCVXjeF0DHSIMEKnnk5qnuZUXaSo/view">Pancasila</a>
             </div>
             <div class="book" style="background-image: url('Matematika_BS_KLS_VI_Cover.png');">
-                <a href="soal_indo_formatif_4.html">Matematika</a>
+                <a href="https://drive.google.com/file/d/1m5vRGe8hmJMaI0O9tiUT83TJiJsWZj7S/view">Matematika</a>
+            </div>
+            <div class="book" style="background-image: url('pai-BS-KLS-VI-Cover.png');">
+                <a href="https://drive.google.com/file/d/13BYCLR-5OwEm_TZhOYbS2MmocTLYmPeo/view?usp=drive_link">PAI</a>
             </div>
             <div class="book" style="background-image: url('book5.jpg');">
-                <a href="soal_indo_formatif_5.html">Formatif 1.5</a>
+                <a href="soal_indo_formatif_5.html">B. Sunda</a>
+            </div>
+            <div class="book" style="background-image: url('INGGRIS-BS-KLS-VI-Cover.png');">
+                <a href="https://static.buku.kemdikbud.go.id/content/pdf/bukuteks/kurikulum21/Inggris_BS_KLS_VI_Lc.pdf">B.Inggris</a>
+            </div>
+            <div class="book" style="background-image: url('book6.jpg');">
+                <a href="soal_indo_formatif_6.html">P5</a>
+            </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="category">
+            <h2>Buku Guru</h2>
+            <h3>Kurikulum merdeka</h3>
+        </div>
+
+        <div class="book-shelf">
+            <div class="book" style="background-image: url('Bahasa-Indonesia-BG-KLS-VI-Cover.png');">
+                <a href="https://drive.google.com/file/d/1k8JaujDp4feeJ1VM5tpQzJz5oDRmsZ8l/view">B.Indonesia</a>
+            </div>
+            <div class="book" style="background-image: url('IPAS-BG-KLS-VI-Cover.png');">
+                <a href="https://drive.google.com/file/d/1gKkja-hmtAdloy4J3H4ousqIwk52QL3n/view">IPAS</a>
+            </div>
+            <div class="book" style="background-image: url('Pendidikan-Pancasila-BG-KLS-VI-Cover.png');">
+                <a href="https://drive.google.com/file/d/1pYqEChieRZGRylwIN1cVHcQ3Cn4djiIF/view">Pancasila</a>
+            </div>
+            <div class="book" style="background-image: url('Matematika_BG_KLS_VI_Cover.png');">
+                <a href="https://drive.google.com/file/d/1D5RVM6-nfd1oFmzvEK7fEZrc1WEWpbsR/view">Matematika</a>
+            </div>
+            <div class="book" style="background-image: url('Seni\ Music-BS-KLS-VI-Cover.png');">
+                <a href="https://drive.google.com/file/d/1AiAoQEy7eMGudW6gEC6Fq-r1AFsvFcGd/view">Seni Musik</a>
+            </div>
+            <div class="book" style="background-image: url('Seni\ Rupa-BS-LKS-VI-Cover.png');">
+                <a href="https://drive.google.com/file/d/1BaOqSs7SkUTDmUsTwCO2l6NC9px6mYNV/view">Seni Rupa</a>
+            </div>
+            <div class="book" style="background-image: url('pai-BS-KLS-VI-Cover.png');">
+                <a href="https://drive.google.com/file/d/13BYCLR-5OwEm_TZhOYbS2MmocTLYmPeo/view?usp=drive_link">PAI</a>
+            </div>
+            <div class="book" style="background-image: url('book5.jpg');">
+                <a href="soal_indo_formatif_5.html">Seni Musik</a>
             </div>
             <div class="book" style="background-image: url('book6.jpg');">
                 <a href="soal_indo_formatif_6.html">Formatif 1.6</a>
             </div>
+            <div class="book" style="background-image: url('book6.jpg');">
+                <a href="soal_indo_formatif_6.html">Formatif 1.6</a>
+            </div>
+            </div>
         </div>
     </div>
-
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 Buku Digital. Semua hak cipta dilindungi.</p>
