--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <section class="hero">
         <h1>Selamat Datang di Belajar Bermakna</h1>
         <p>
-            Temukan materi pembelajaran lengkap, interaktif, dan menyenangkan !
+            Temukan materi pembelajaran lengkap, interaktif, dan menyenangkan. Dapatkan pengalaman belajar terbaik untuk meraih prestasi terbaik!
         </p>
         <button class="btn" onclick="scrollToSection()">Mulai Belajar Sekarang</button>
     </section>
