--- a/mtk6beberapaFormatif.html
+++ b/mtk6beberapaFormatif.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modul Ajar B.Indonesia Kelas 6</title>
+    <title>Asesmen Formatif B.Indonesia Kelas 6</title>
     <link rel="icon" href="dl.png" type="image/x-icon">
     <style>
         body {
@@ -18,9 +18,9 @@
         }
 
         header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 30px;
+            background: url('bg7.jpg') no-repeat center/cover;
+            color: rgb(0, 0, 0);
+            padding: 50px;
             text-align: center;
         }
 
@@ -30,7 +30,7 @@
         }
 
         nav {
-            background-color: #025613;
+            background-color: #2a5fe5;
             display: flex;
             justify-content: center;
             padding: 10px;
@@ -73,7 +73,7 @@
         }
 
         .menu-item {
-            background-color: #4CAF50;
+            background-color: #6caad3;
             color: white;
             padding: 15px 30px;
             border-radius: 8px;
@@ -86,13 +86,13 @@
         }
 
         .menu-item:hover {
-            background-color: #45a049;
+            background-color: #356dd6;
             transform: translateY(-5px) scale(1.05);
             box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
         }
 
         footer {
-            background-color: #025613;
+            background-color: #2355d4;
             color: white;
             padding: 20px;
             text-align: center;
@@ -102,29 +102,16 @@
             margin: 0;
             font-size: 0.9em;
         }
-        @media (max-width: 768px) {
-            nav {
-                flex-direction: column;
-            }
-
-            nav a {
-                margin: 5px 0;
-            }
-
-            .card-container {
-                grid-template-columns: 1fr;
-            }
-        }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>Modul Ajar B.Indonesia Kelas 6</h1>
+    <h1>Asesmen Formatif B.Indonesia Kelas 6</h1>
 </header>
 
 <nav>
-    <a href="kelas6.html">Kembali</a>
+    <a href="index.html">Kembali</a>
     <a href="Bank Soal.html">Bank Soal</a>
     <a href="#resources">Modul Ajar</a>
     <a href="#resources">Video Pembelajaran</a>
@@ -139,14 +126,14 @@
         <h2>Tumbuhan Sahabatku</h2>
 
         <div class="menu-list">
-            <div class="menu-item"><a href="soal_indo_formatif_1.html">Modul ajar 1.1</a></div>
-            <div class="menu-item"><a href="soal_indo_formatif_2.html">Modul ajar 1.2</a></div>
-            <div class="menu-item"><a href="soal_indo_formatif_3.html">Modul ajar 1.3</a></div>
-            <div class="menu-item"><a href="soal_indo_formatif_4.html">Modul ajar 1.4</a></div>
-            <div class="menu-item"><a href="soal_indo_formatif_1.html">Modul ajar 1.5</a></div>
-            <div class="menu-item"><a href="soal_indo_formatif_2.html">Modul ajar 1.6</a></div>
-            <div class="menu-item"><a href="soal_indo_formatif_3.html">Modul ajar 1.7</a></div>
-            <div class="menu-item"><a href="soal_indo_formatif_4.html">Modul ajar 1.8</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.1</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.2</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.3</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_4.html">Formatif 1.4</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.5</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.6</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.7</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_4.html">Formatif 1.8</a></div>
         </div>
     </div>
 </div>
