--- a/kelas6.html
+++ b/kelas6.html
@@ -268,7 +268,7 @@
                 <img src="forumdiskusi.png" alt="Quiz Online">
                 <h3>Kumpulan CP</h3>
                 <p>Ikuti quiz menarik untuk menambah wawasan.</p>
-                <a href="quiz.html">Mulai Quiz</a>
+                <a href="baru.html">Mulai Quiz</a>
             </div>
         </div>
     </section>
