--- a/bank soal.html
+++ b/bank soal.html
@@ -161,7 +161,7 @@
                 <img src="indo6.png" alt="Video 1">
                 <div class="content">
                     <h3>B. Indonesia</h3>
-                    <a href="b.indo6.html" target="_blank">Lihat</a>
+                    <a href="B.Indo6beberapaFormatif.html" target="_blank">Lihat</a>
                 </div>
             </div>
             <!-- Video Card 2 -->
