--- a/kelas6.html
+++ b/kelas6.html
@@ -214,7 +214,7 @@
                 <img src="banksoal.png" alt="Bank Soal">
                 <h3>Bank Soal</h3>
                 <p>Silahkan berlatih soal-soal dari berbagai mata pelajaran.</p>
-                <a href="bank Soal.html">Lihat Soal</a>
+                <a href="bank soal.html">Lihat Soal</a>
             </div>
             <div class="card">
                 <img src="modulajar.png" alt="Sumber Belajar">
