--- a/videopembelajaran.html
+++ b/videopembelajaran.html
@@ -179,7 +179,7 @@
                 { title: "Belajar Tenses", thumbnail: "video-thumbnail3.jpg", url: "video3.mp4" },
             ],
             "IPA": [
-                { title: "Sistem Tata Surya", thumbnail: "video-thumbnail3.jpg", url: "video3.mp4" },
+          { title: "MENJELAJAHI BUMI, MATAHARI, BULAN", thumbnail: "videoipas6.5.1.png", url: "https://www.youtube.com/watch?v=U7gzEifk8iQ" },
                 { title: "Fotosintesis", thumbnail: "video-thumbnail4.jpg", url: "video4.mp4" },
                 { title: "Sistem Tata Surya", thumbnail: "video-thumbnail3.jpg", url: "video3.mp4" },
                 { title: "Fotosintesis", thumbnail: "video-thumbnail4.jpg", url: "video4.mp4" },
