--- a/kelas6.html
+++ b/kelas6.html
@@ -226,7 +226,7 @@
                 <img src="videopembelajaran.png" alt="Video Pembelajaran">
                 <h3>Video Pembelajaran</h3>
                 <p>Silahkan Menggunakan Video Pembelajaran.</p>
-                <a href="Videopembelajaran.html">Lihat Video</a>
+                <a href="videopembelajaran.html">Lihat Video</a>
             </div>
             <div class="card">
                 <img src="forumdiskusi.png" alt="Forum Diskusi">
