--- a/B.Indo6beberapaFormatif.html
+++ b/B.Indo6beberapaFormatif.html
@@ -262,7 +262,7 @@
             <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.1</a></div>
             <div class="menu-item"><a href="soal_indo_formatif_1_1.html">Formatif 1.1.1</a></div>
             <div class="menu-item"><a href="soal_indo_formatif_sms2_bab5_p2">Formatif 1.2</a></div>
-            <div class="menu-item"><a href="soal_indo_formatif_1.html">Formatif 1.3</a></div>
+            <div class="menu-item"><a href="soal_indo_formatif_sms2_bab5_p3.html">Formatif 1.3</a></div>
             <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.4</a></div>
             <div class="menu-item"><a href="soal_indo_formatif_3.html">Formatif 1.5</a></div>
             <div class="menu-item"><a href="soal_indo_formatif_2.html">Formatif 1.6</a></div>
